# GameOfLife

_build/: .db  .digest-db  log
_build/default/.dune/: configurator
_build/default/lib/.GameOfLife.objs/byte/: gameOfLife.cmo
_build/default/lib/.GameOfLife.objs/native/: gameOfLife.cmx
_build/default/lib/.merlin-conf/: lib-GameOfLife
_build/default/test/.GameOfLife.eobjs/byte/: dune__exe__GameOfLife.cmi  dune__exe__GameOfLife.cmti
_build/default/test/.GameOfLife.eobjs/native/: dune__exe__GameOfLife.cmx
c/: CMakeLists.txt  compile_commands.json  main.c
htmx-bun/: README.md  bun.lockb  index.ts  package.json
htmx-go/: go.mod
lib/: dune
ocaml/: dune-project
ocaml/_build/: .db  .digest-db  log
ocaml/_build/default/: GameOfLife.dune-package  GameOfLife.install
ocaml/_build/default/.dune/: configurator.v2
ocaml/_build/default/lib/: GameOfLife.cma  GameOfLife.cmxa  GameOfLife.cmxs
ocaml/_build/default/lib/.GameOfLife.objs/byte/: gameOfLife.cmi  gameOfLife.cmt
ocaml/_build/default/test/.merlin-conf/: exe-GameOfLife
ocaml/_build/install/default/lib/GameOfLife/: META  dune-package  opam
ocaml/test/: dune
